Linked lines only work with linked objects #42198

Closed
opened 2014-10-13 00:28:57 +02:00 by Gabriel Caraballo · 11 comments

System Information
Ubuntu 14.04 - AMD Mobility Radeon HD 4250

Blender Version
Broken: 2.72
Worked: 2.71

The lineset is linked from a file, the plates are linked from other file. The table and the holders are local.

I try resaving the /libreria/lineas.blend file with B2.72 (it was done on B2.71).
The file 000_0170_dieta.blend is a copy of a B2.71 file, resaved as B2.72 (it already had the lines linked).
/utileria/platos.blend file is B2.72, but the objects was appended froma B2.71 file and the modified.

2.71
freebug-2.71.png

2.72
freebug-2.72.png

Exact steps for others to reproduce the error
Press F12 on file /episodios/0000_test/0000_017_dieta/0000_017_dieta.blend freebug.zip

Regards!

**System Information** Ubuntu 14.04 - AMD Mobility Radeon HD 4250 **Blender Version** Broken: 2.72 Worked: 2.71 The lineset is linked from a file, the plates are linked from other file. The table and the holders are local. I try resaving the **/libreria/lineas.blend** file with B2.72 (it was done on B2.71). The file **000_0170_dieta.blend** is a copy of a B2.71 file, resaved as B2.72 (it already had the lines linked). **/utileria/platos.blend** file is B2.72, but the objects was appended froma B2.71 file and the modified. 2.71 ![freebug-2.71.png](https://archive.blender.org/developer/F116200/freebug-2.71.png) 2.72 ![freebug-2.72.png](https://archive.blender.org/developer/F116199/freebug-2.72.png) **Exact steps for others to reproduce the error** Press F12 on file **/episodios/0000_test/0000_017_dieta/0000_017_dieta.blend** [freebug.zip](https://archive.blender.org/developer/F116203/freebug.zip) Regards!

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @GabrielCaraballo

Added subscriber: @GabrielCaraballo

This comment was removed by @GabrielCaraballo

*This comment was removed by @GabrielCaraballo*

Added subscriber: @AditiaA.Pratama

Added subscriber: @AditiaA.Pratama

Hi,

I've been test the file, and it is confirmed. I'm on Ubuntu 14.04 64bit blender 2.72.1 858bf1a

Hi, I've been test the file, and it is confirmed. I'm on Ubuntu 14.04 64bit blender 2.72.1 858bf1a
Tamito Kajiyama was assigned by Campbell Barton 2014-10-13 16:23:49 +02:00

Added subscriber: @ideasman42

Added subscriber: @ideasman42

This issue was referenced by f4a260fb3c

This issue was referenced by f4a260fb3c039d4ad241b87c5951b3348227b056

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit f4a260fb3c.

Closed by commit f4a260fb3c.

FYI latest git master builds for Linux and Windows including the proposed fix are available through buildbots:
https://builder.blender.org/download/
Any further testing to check out the fix is much appreciated.

FYI latest git master builds for Linux and Windows including the proposed fix are available through buildbots: https://builder.blender.org/download/ Any further testing to check out the fix is much appreciated.

This issue was referenced by 1800bfb8ca

This issue was referenced by 1800bfb8ca8218675c98e063494ac1e24b20fe07
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42198
No description provided.